# fp-programming-course

./: .gitignore  README.md  cmd.md  fp.cabal  install.sh  nitrous-post-create.sh  nitrous.json  nitrous.readme.md
excercises/: currying.hs  homework.md  intro.md  kolejnosc.hs  nawiasy.hs  print1.hs  print2.hs  where_let.hs
exercises/: hello.hs  helloWorld.hs  homework.md  intro.md  litera.hs  mult.hs  nawiasy.hs  print2.hs  your_where.hs
instructions/: 00_intro.md  01_funkcje.md  02_operatory.md  03_nawiasy.md  04_moduly.md  05_dzialania.md  06_dollar.md  07_where_let.md  08_lambda.md  09_string.md  10_types.md  11_currying.md
src/Fp/: Parabolic.hs  Recursion.hs  Various.hs
test/Fp/: ParabolicSpec.hs  RecursionSpec.hs
