name:             fp
version:          0.0.0
license:          MIT
license-file:     LICENSE
copyright:        (c) 2013 Michal Grygierzec & Michal Sitko
author:           Michal Grygierzec & Michal Sitko
maintainer:       Michal Grygierzec & Michal Sitko
build-type:       Simple
cabal-version:    >= 1.8

library
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  exposed-modules:
      Fp.Recursion
  build-depends:
      base    == 4.*

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall
  hs-source-dirs:
      test
  main-is:
      Spec.hs
  build-depends:
      base    == 4.*
    , fp
    , hspec   == 2.*
